--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,7 @@ spring:
       ddl-auto: create
     show-sql: true
   profiles:
-    active:
-      - dev
+    active: dev
   config:
     import: optional:file:.env[.properties]
 
