feat(사용자 관리): 어드민 계정 초기화 기능 중간구현, coderabbit.yaml 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,9 @@ management:
   observations:
     annotations:
       enabled: true
+
+playlist:
+  admin:
+    username: admin
+    email: admin@admin.com
+    password: admin123
