--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -9,11 +9,10 @@ reviews:
   allow_non_default_branches: true  # main 이 아닌 브랜치에서도 자동 리뷰
   language: ko             # 한국어로 리뷰 받기
 
-comments:
-  level: detailed           # 코멘트 스타일: concise(간결) / detailed(상세)
+review_preferences:
+  comment_level: detailed           # 코멘트 스타일: concise(간결) / detailed(상세)
   include_style_suggestions: true
   include_test_suggestions: true
   max_comments: 15          # PR당 최대 코멘트 수
   deduplicate: true
-
-summary: true               # 요약 코멘트 추가
+  include_summary:       # 요약 코멘트 추가
