--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -1,18 +1,15 @@
 # yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
 
+language: "ko-KR" # 한국말로 설정
+early_access: false
 reviews:
+  profile: "chill" # 리뷰 적당하게 한다는 뜻
+  request_changes_workflow: true # 코드래빗이 리뷰 끝나면 알아서 PR 승인하게끔
+  high_level_summary: true # 전체 요약 코멘트 작성
+  review_status: false # 각 파일/라인에 대해 "좋음 / 개선 필요 " 등 뱃지 표시
+  collapse_walkthrough: false
   auto_review:
-    enabled: true        # PR 생성 시 자동 리뷰
-  review_on_open: true     # PR 열릴 때 리뷰 시작
-  review_on_push: true     # 커밋 추가 시 재리뷰
-  style: balanced          # 리뷰 강도: light, balanced, strict 중 선택
-  allow_non_default_branches: true  # main 이 아닌 브랜치에서도 자동 리뷰
-  language: ko             # 한국어로 리뷰 받기
-
-review_preferences:
-  comment_level: detailed           # 코멘트 스타일: concise(간결) / detailed(상세)
-  include_style_suggestions: true
-  include_test_suggestions: true
-  max_comments: 15          # PR당 최대 코멘트 수
-  deduplicate: true
-  include_summary:       # 요약 코멘트 추가
+    enabled: true
+    drafts: false
+chat:
+  auto_reply: true
