--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,6 @@ management:
 
 playlist:
   admin:
-    username: admin
-    email: admin@admin.com
-    password: admin123
+    username: ${ADMIN_USERNAME}
+    email: ${ADMIN_EMAIL}
+    password: ${ADMIN_PASSWORD}
