feat(사용자 관리): 어드민 계정 초기화 구현 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,6 @@ management:
 
 playlist:
   admin:
-    username: ${ADMIN_USERNAME}
+    username: ${ADMIN_USER}
     email: ${ADMIN_EMAIL}
     password: ${ADMIN_PASSWORD}
