feat(docker): redis 관련 정보 추가
ENV 파일에 해당 정보 추가
REDIS_PORT=
REDIS_PASSWORD=

--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -1,4 +1,9 @@
 spring:
+  data:
+    redis:
+      host: redis
+      port: ${REDIS_PORT}
+      password: ${REDIS_PASSWORD}
   datasource:
     url: ${SPRING_DATASOURCE_URL}
     username: ${SPRING_DATASOURCE_USERNAME}
