fix(사용자 관리): yml 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,6 @@ management:
   observations:
     annotations:
       enabled: true
+
+  cookie:
+    secrue: ${COOKIE_SECURE:false} # 로컬 개발시에만 false
