--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -17,11 +17,10 @@ spring:
 playlist:
   jwt:
     access-token:
-      # :값 부분은 디폴트라 환경변수 안주면 저 값 사용, 환경변수 주면 환경변수 값 사용함
-      secret: ${JWT_ACCESS_TOKEN_SECRET:mySuperSecureAccessKeyForDocker123}
+      secret: ${JWT_ACCESS_TOKEN_SECRET}
       expiration-ms: ${JWT_ACCESS_TOKEN_EXPIRATION_MS:3600000} # 1시간
     refresh-token:
-      secret: ${JWT_REFRESH_TOKEN_SECRET:mySuperSecureRefreshKeyForDocker123}
+      secret: ${JWT_REFRESH_TOKEN_SECRET}
       expiration-ms: ${JWT_REFRESH_TOKEN_EXPIRATION_MS:604800000} # 7일
     cookie:
       secure: true
