feat(docker): dev에서 쿠키 보안 설정 false로 변경

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -35,7 +35,7 @@ playlist:
       secret: ${JWT_REFRESH_TOKEN_SECRET}
       expiration-ms: ${JWT_REFRESH_TOKEN_EXPIRATION_MS:604800000} # 7일
     cookie:
-      secure: true
+      secure: false
 
 logging:
   level:
