feat(실시간 같이 보기): CORS 허용할 origin을 환경변수로 받음

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,3 +27,6 @@ management:
 
   cookie:
     secrue: ${COOKIE_SECURE:false} # 로컬 개발시에만 false
+
+websocket:
+  allowed-origins: ${WEBSOCKET_ALLOWED_ORIGINS}
