feat(CICD): 버킷 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -32,6 +32,11 @@ playlist:
       expiration-ms: ${JWT_REFRESH_TOKEN_EXPIRATION_MS:604800000} # 7일
     cookie:
       secure: true
+  s3:
+    content-bucket: playlist-content-bucket
+    profile-bucket: playlist-profile-bucket
+    logs-bucket: playlist-logs-bucket
+    backup-bucket: playlist-backup-bucket
 
 logging:
   level:
