--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,11 @@ dependencies {
     annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
+    // 비밀번호 재설정에서 Rate Limiting 을 적용시키기 위한 의존성
+    implementation 'com.bucket4j:bucket4j-core:8.2.0'
+    implementation 'com.bucket4j:bucket4j-redis:8.2.0'
+    implementation 'org.redisson:redisson:3.23.4'
 }
 
 tasks.named('test') {
