fix(콘텐츠 데이터 관리): The Sports Open API 데이터 수집
Open API에 대한 로직을 일부 수정합니다. 더불어 컨벤션에 따른 테스트 환경 구축을 위해 docker-compose.yml에 .env를 읽을 수 있게끔 적용시키며, application-dev.yml을 docker 환경에서 테스트할 수 있게끔 수정합니다.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,6 +6,14 @@ spring:
     url: ${SPRING_DATASOURCE_URL}
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
+  api:
+    tmdb:
+      base-url: ${TMDB_BASE_URL}
+      key: ${TMDB_API_KEY}
+      access-token: ${TMDB_API_ACCESS_TOKEN}
+    sportsdb:
+      key: ${SPORTSDB_API_KEY}
+      base-url: ${SPORTSDB_BASE_URL}
 
   jpa:
     hibernate:
