--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -36,10 +36,10 @@ playlist:
 cloud:
   aws:
     s3:
-      content-bucket: playlist-content-bucket
-      profile-bucket: playlist-profile-bucket
-      logs-bucket: playlist-logs-bucket
-      region: ap-northeast-2
+      content-bucket: ${CONTENT_BUCKET}
+      profile-bucket: ${PROFILE_BUCKET}
+      logs-bucket: ${LOGS_BUCKET}
+      region: ${AWS_REGION}
 
 logging:
   level:
