feat(CICD): 환경변수 추가
파일명에 공백/특수문자가 포함된 경우 URL이 올바르게 생성되지 않을 수 있으므로

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,9 +43,13 @@ services:
       JWT_ACCESS_TOKEN_EXPIRATION_MS: ${JWT_ACCESS_TOKEN_EXPIRATION_MS}
       JWT_REFRESH_TOKEN_EXPIRATION_MS: ${JWT_REFRESH_TOKEN_EXPIRATION_MS}
       SPRING_MAIL_HOST: ${SPRING_MAIL_HOST}
-      SPRING_MAIL_PROT: ${SPRING_MAIL_PORT}
+      SPRING_MAIL_PORT: ${SPRING_MAIL_PORT}
       SPRING_MAIL_USERNAME: ${SPRING_MAIL_USERNAME}
       SPRING_MAIL_PASSWORD: ${SPRING_MAIL_PASSWORD}
+      CONTENT_BUCKET: ${CONTENT_BUCKET}
+      PROFILE_BUCKET: ${PROFILE_BUCKET}
+      LOGS_BUCKET: ${LOGS_BUCKET}
+      S3_REGION: ${S3_REGION}
     ports:
       - "8080:8080"
     restart: always
