--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,9 +72,9 @@ jobs:
             .containerDefinitions[0].image = $IMAGE
             | .containerDefinitions[0].environment = [
                 {"name": "SPRING_PROFILES_ACTIVE", "value": "prod"},
-                {"name": "$RDS_URL", "value": $RDS_URL},
-                {"name": "$RDS_USERNAME", "value": $RDS_USERNAME},
-                {"name": "$RDS_PASSWORD", "value": $RDS_PASSWORD},
+                {"name": "RDS_URL", "value": $RDS_URL},
+                {"name": "RDS_USERNAME", "value": $RDS_USERNAME},
+                {"name": "RDS_PASSWORD", "value": $RDS_PASSWORD},
                 {"name": "JWT_ACCESS_TOKEN_SECRET", "value": $JWT_ACCESS_TOKEN_SECRET},
                 {"name": "JWT_ACCESS_TOKEN_EXPIRATION_MS", "value": $JWT_ACCESS_TOKEN_EXPIRATION_MS},
                 {"name": "JWT_REFRESH_TOKEN_SECRET", "value": $JWT_REFRESH_TOKEN_SECRET},
