fix(콘텐츠 데이터 관리): The Sports Open API 데이터 수집
The Sports Open API를 통해 전달받은 데이터들이 DB에 적재되지 않던 현상을 수정합니다. 테스트용 컨트롤러를 삭제했습니다.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,14 +6,6 @@ spring:
     url: ${SPRING_DATASOURCE_URL}
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
-  api:
-    tmdb:
-      base-url: ${TMDB_BASE_URL}
-      key: ${TMDB_API_KEY}
-      access-token: ${TMDB_API_ACCESS_TOKEN}
-    sportsdb:
-      key: ${SPORTSDB_API_KEY}
-      base-url: ${SPORTSDB_BASE_URL}
 
   jpa:
     hibernate:
@@ -59,3 +51,19 @@ management:
   info:
     env:
       enabled: true
+
+# api
+api:
+  tmdb:
+    base-url: ${TMDB_BASE_URL}
+    key: ${TMDB_API_KEY}
+  sportsdb:
+    key: ${SPORTSDB_API_KEY}
+    base-url: ${SPORTSDB_BASE_URL}
+
+# aws s3
+app:
+  file-upload:
+    bucket: playlist-team1-bucket-b1uffer
+    directory: ""
+    base-url: https://playlist-team1-bucket-b1uffer.s3.ap-northeast-2.amazonaws.com
