docs(콘텐츠 데이터 관리): 팀 컨벤션을 준수하여 클래스 위치를 변경하고 형상관리를 추가합니다.
WebClientConfig, TheSportsConfig를 Global/Config 위치로 변경시킵니다. Git Secret에 외부 API 관련 형상관리를 적용시킵니다. 그리고 docker-compose와 application-prod.yml에 API 관련 형상관리 처리를 구성합니다.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,10 @@ services:
       PROFILE_BUCKET: ${PROFILE_BUCKET}
       LOGS_BUCKET: ${LOGS_BUCKET}
       S3_REGION: ${S3_REGION}
+      TMDB_API_KEY: ${TMDB_API_KEY}
+      TMDB_BASE_URL: ${TMDB_BASE_URL}
+      SPORTSDB_API_KEY: ${SPORTSDB_API_KEY}
+      SPORTSDB_BASE_URL: ${SPORTSDB_BASE_URL}
     ports:
       - "8080:8080"
     restart: always
