--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: "3.8"
 
 services:
   redis:
-    image: redis:7.2
+    image: redis:7
     container_name: playlist-redis
     ports:
       - "6379:6379"
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    command: redis-server
 
   db:
     image: postgres:16
@@ -23,6 +23,7 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:7.5.0
+    container_name: playlist-kafka
     ports:
       - "29092:29092"
     environment:
@@ -58,6 +59,7 @@ services:
 
   kafka-ui:
     image: provectuslabs/kafka-ui:v0.7.2
+    container_name: playlist-kafka-ui
     ports:
       - "8081:8080"
     environment:
@@ -83,7 +85,6 @@ services:
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
       REDIS_HOST: ${REDIS_HOST}
-      REDIS_PASSWORD: ${REDIS_PASSWORD}
       REDIS_PORT: ${REDIS_PORT}
       JWT_ACCESS_TOKEN_SECRET: ${JWT_ACCESS_TOKEN_SECRET}
       JWT_REFRESH_TOKEN_SECRET: ${JWT_REFRESH_TOKEN_SECRET}
