fix(CICD): ElastiCache가 전송 중 암호화 활성화되어 있어 TLS 설정 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -20,6 +20,8 @@ spring:
     redis:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
+      ssl:
+        enabled: true
       lettuce:
         pool:
           max-active: 20
