fix(CICD): dev와 prod로 ssl 설정 on/off를 분리해서 docker compsoe up 안되는 문제 해결

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -20,7 +20,7 @@ spring:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_PORT:6379}
       ssl:
-        enabled: true
+        enabled: false
       lettuce:
         pool:
           max-active: 20
