--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,15 +29,15 @@ jobs:
 
       - name: Build Docker image # 도커 이미지 빌드
         run: |
-          docker build -t ${{ secrets.ECR_REPO }}:${{ github.run_number }} .
+          docker build -t ${{ secrets.ECR_REPO }}:${{ github.sha }} .
 
       - name: Tag Docker image # 태그 붙이기
         run: |
-          docker tag ${{ secrets.ECR_REPO }}:${{ github.run_number }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO }}:${{ github.run_number }}
+          docker tag ${{ secrets.ECR_REPO }}:${{ github.sha }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO }}:${{ github.sha }}
 
       - name: Push Docker image to ECR # ECR 로 push
         run: |
-          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO }}:${{ github.run_number }}
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO }}:${{ github.sha }}
 
       - name: Replace placeholders in task-definition.json # task-definition.json에 ACCOUNT_ID 대입
         run: |
@@ -52,7 +52,7 @@ jobs:
       - name: Update image and env vars using jq # 이미지 + 환경변수 치환
         run: |
           jq \
-            --arg IMAGE "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO }}:${{ github.run_number }}" \
+            --arg IMAGE "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO }}:${{ github.sha }}" \
             --arg RDS_URL "${{ secrets.RDS_URL }}" \
             --arg RDS_USERNAME "${{ secrets.RDS_USERNAME }}" \
             --arg RDS_PASSWORD "${{ secrets.RDS_PASSWORD }}" \
