--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,6 +78,7 @@ jobs:
             --arg ADMIN_PASSWORD "${{ secrets.ADMIN_PASSWORD }}" \
             --arg GOOGLE_CLIENT_ID "${{ secrets.GOOGLE_CLIENT_ID }}" \
             --arg GOOGLE_CLIENT_PASSWORD "${{ secrets.GOOGLE_CLIENT_PASSWORD }}" \
+            --arg KAKAO_REST_API_KEY "${{ secrets.KAKAO_REST_API_KEY }}" \
             --arg KAFKA_BOOTSTRAP_SERVERS "${{ secrets.KAFKA_BOOTSTRAP_SERVERS }}" \
             '
             .containerDefinitions[0].image = $IMAGE
@@ -109,6 +110,7 @@ jobs:
                 {"name": "ADMIN_PASSWORD", "value": $ADMIN_PASSWORD},
                 {"name": "GOOGLE_CLIENT_ID", "value": $GOOGLE_CLIENT_ID},
                 {"name": "GOOGLE_CLIENT_PASSWORD", "value": $GOOGLE_CLIENT_PASSWORD},
+                {"name": "KAKAO_REST_API_KEY", "value": $KAKAO_REST_API_KEY},
                 {"name": "KAFKA_BOOTSTRAP_SERVERS", "value": $KAFKA_BOOTSTRAP_SERVERS}
               ]
             ' \
