--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,13 +15,14 @@ spring:
           kakao:
             client-id: ${KAKAO_REST_API_KEY}
             client-secret: ""
+            client-authentication-method: none
             client-name: kakao
             redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
             authorization-grant-type: authorization_code
-            client-authentication-method: client_secret_post
             scope:
                 - profile_nickname
                 - profile_image
+                - account_email
 
         provider:
           kakao:
