feat(프로필 관리): JMeter를 이용한 부하테스트 계정 생성

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -70,3 +70,9 @@ api:
   sportsdb:
     key: ${SPORTSDB_API_KEY}
     base-url: ${SPORTSDB_BASE_URL}
+
+loadtest:
+  user:
+    prefix: tester
+    count: 50
+    password: abcd1234?
