--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,7 +102,7 @@ services:
       TMDB_BASE_URL: ${TMDB_BASE_URL}
       SPORTSDB_API_KEY: ${SPORTSDB_API_KEY}
       SPORTSDB_BASE_URL: ${SPORTSDB_BASE_URL}
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
     ports:
       - "8080:8080"
     restart: always
