--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -34,10 +34,7 @@ spring:
     properties:
       security.protocol: SASL_SSL
       sasl.mechanism: PLAIN
-      sasl.jaas.config: >
-          org.apache.kafka.common.security.plain.PlainLoginModule required
-          username="${KAFKA_USERNAME}"
-          password="${KAFKA_PASSWORD}";
+      sasl.jaas.config: "org.apache.kafka.common.security.plain.PlainLoginModule required username=\"${KAFKA_USERNAME}\" password=\"${KAFKA_PASSWORD}\";"
 
     consumer:
       group-id: playlist-group
