--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -128,4 +128,4 @@ jobs:
           task-definition: task-definition.json
           service: ${{ secrets.SERVICE_NAME }}
           cluster: ${{ secrets.CLUSTER_NAME }}
-          wait-for-service-stability: false
+          wait-for-service-stability: true
