feat(CICD): 안정적인 서비스를 위해 app에 대한 헬스체크 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,12 @@ services:
   app:
     build: .
     container_name: playlist-app
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:8080/actuator/health || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 60s
     depends_on:
       db:
         condition: service_healthy
