fix(사용자 관리): 배포주소 수정예정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -62,7 +62,7 @@ playlist:
 
 oauth2:
   redirect:
-    base-url:
+    base-url: ${OAUTH2_REDIRECT_BASE_URL:http://localhost:8080} # 배포 주소 수정예정
 
 cloud:
   aws:
