fix(CICD): 불필요한 주석 및 기본값 제거

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -45,7 +45,7 @@ playlist:
 
 oauth2:
   redirect:
-    base-url: ${OAUTH2_REDIRECT_BASE_URL:http://localhost:8080} # 배포 주소 수정예정
+    base-url: ${OAUTH2_REDIRECT_BASE_URL}
 
 logging:
   level:
